feat(notebook): add initial data exploratory notebook

--- a/notebooks/1-tech-challenge.ipynb
+++ b/notebooks/1-tech-challenge.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,19 +75,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "BASE_URL = 'http://vitibrasil.cnpuv.embrapa.br/download/'\n",
     "\n",
     "CSV_URLS = dict(\n",
-    "    producao='Producao.csv',\n",
+    "    producao=dict(producao='Producao.csv'),\n",
     "    processamento=dict(viniferas='ProcessaViniferas.csv',\n",
     "                       americanas='ProcessaAmericanas.csv',\n",
     "                       mesa='ProcessaMesa.csv',\n",
     "                       sem_classificacao='ProcessaSemclass.csv'),\n",
-    "    comercializacao='Comercio.csv',\n",
+    "    comercializacao=dict(comercio='Comercio.csv'),\n",
     "    importacao=dict(mesa='ImpVinhos.csv',\n",
     "                    espumantes='ImpEspumantes.csv',\n",
     "                    frescas='ImpFrescas.csv',\n",
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,33 +168,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:01<00:00,  3.23it/s]\n",
-      "100%|██████████| 5/5 [00:01<00:00,  3.38it/s]\n",
-      "100%|██████████| 4/4 [00:02<00:00,  1.56it/s]\n",
-      "100%|██████████| 5/5 [00:05<00:00,  1.18s/it]\n"
+      "100%|██████████| 1/1 [00:00<00:00,  3.22it/s]\n",
+      "100%|██████████| 4/4 [00:01<00:00,  3.26it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00,  3.08it/s]\n",
+      "100%|██████████| 5/5 [00:01<00:00,  3.30it/s]\n",
+      "100%|██████████| 4/4 [00:01<00:00,  3.12it/s]\n",
+      "100%|██████████| 5/5 [00:04<00:00,  1.07it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['comercio.csv',\n",
-       " 'importacao',\n",
-       " 'data.zip',\n",
-       " 'producao.csv',\n",
-       " 'exportacao',\n",
-       " '.gitkeep',\n",
-       " 'estimativa_dou_2020.xls',\n",
-       " 'processamento']"
+       "['producao', 'importacao', 'exportacao', 'comercializacao', 'processamento']"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,13 +208,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "==> ./data/raw/comercializacao/comercio.csv <==\n",
+      "1;VINHO DE MESA;VINHO DE MESA;98327606;114399031;118377367;116617910;94173324;108031792;139238614;140813114;141293379;149609112;122825298;128894580;166861772;195616620;171619507;185191837;203130018;131065191;150678647;172921267;164725646;190134895;180230431;201168480;180295366;146583828;165831436;174768638;181576649;200578746;221023603;221518224;227447392;217082959;225021830;271248493;245625614;226710045;200488612;234525979;221242945;230310468;206969571;221590810;206404427;209198468;166769622;176059959;177186273;180446489;215557931;210012238;187939996\n",
+      "\n",
       "==> ./data/raw/exportacao/expespumantes.csv <==\n",
       "Id;País;1970;1970;1971;1971;1972;1972;1973;1973;1974;1974;1975;1975;1976;1976;1977;1977;1978;1978;1979;1979;1980;1980;1981;1981;1982;1982;1983;1983;1984;1984;1985;1985;1986;1986;1987;1987;1988;1988;1989;1989;1990;1990;1991;1991;1992;1992;1993;1993;1994;1994;1995;1995;1996;1996;1997;1997;1998;1998;1999;1999;2000;2000;2001;2001;2002;2002;2003;2003;2004;2004;2005;2005;2006;2006;2007;2007;2008;2008;2009;2009;2010;2010;2011;2011;2012;2012;2013;2013;2014;2014;2015;2015;2016;2016;2017;2017;2018;2018;2019;2019;2020;2020;2021;2021;2022;2022\n",
       "\n",
@@ -257,7 +255,10 @@
       "id\tcontrol\tcultivar\t1970\t1971\t1972\t1973\t1974\t1975\t1976\t1977\t1978\t1979\t1980\t1981\t1982\t1983\t1984\t1985\t1986\t1987\t1988\t1989\t1990\t1991\t1992\t1993\t1994\t1995\t1996\t1997\t1998\t1999\t2000\t2001\t2002\t2003\t2004\t2005\t2006\t2007\t2008\t2009\t2010\t2011\t2012\t2013\t2014\t2015\t2016\t2017\t2018\t2019\t2020\t2021\t2022\n",
       "\n",
       "==> ./data/raw/processamento/processaviniferas.csv <==\n",
-      "id\tcontrol\tcultivar\t1970\t1971\t1972\t1973\t1974\t1975\t1976\t1977\t1978\t1979\t1980\t1981\t1982\t1983\t1984\t1985\t1986\t1987\t1988\t1989\t1990\t1991\t1992\t1993\t1994\t1995\t1996\t1997\t1998\t1999\t2000\t2001\t2002\t2003\t2004\t2005\t2006\t2007\t2008\t2009\t2010\t2011\t2012\t2013\t2014\t2015\t2016\t2017\t2018\t2019\t2020\t2021\t2022\n"
+      "id\tcontrol\tcultivar\t1970\t1971\t1972\t1973\t1974\t1975\t1976\t1977\t1978\t1979\t1980\t1981\t1982\t1983\t1984\t1985\t1986\t1987\t1988\t1989\t1990\t1991\t1992\t1993\t1994\t1995\t1996\t1997\t1998\t1999\t2000\t2001\t2002\t2003\t2004\t2005\t2006\t2007\t2008\t2009\t2010\t2011\t2012\t2013\t2014\t2015\t2016\t2017\t2018\t2019\t2020\t2021\t2022\n",
+      "\n",
+      "==> ./data/raw/producao/producao.csv <==\n",
+      "id;produto;1970;1971;1972;1973;1974;1975;1976;1977;1978;1979;1980;1981;1982;1983;1984;1985;1986;1987;1988;1989;1990;1991;1992;1993;1994;1995;1996;1997;1998;1999;2000;2001;2002;2003;2004;2005;2006;2007;2008;2009;2010;2011;2012;2013;2014;2015;2016;2017;2018;2019;2020;2021;2022\n"
      ]
     }
    ],
@@ -275,7 +276,7 @@
     "\n",
     "**TL;DR**\n",
     "\n",
-    "* Ciência de dados desbanca Schopenhauer\n",
+    "* Se fácil, teria graça? (Provavelmente ainda sim, mas onde está o significado da vida sem o estresse?)\n",
     "\n",
     "**Whatever**\n",
     "\n",
