--- a/notebooks/1-tech-challenge.ipynb
+++ b/notebooks/1-tech-challenge.ipynb
@@ -137,7 +137,7 @@
     "            urlretrieve(url, save_path)\n",
     "    except ConnectionResetError:\n",
     "        print(f'File {url} could not be downloaded')\n",
-    "        if is_retry:\n",
+    "        if not is_retry:\n",
     "            download_files(url, save_path, True)\n",
     "        return"
    ]
@@ -3346,18 +3346,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.8"
   }
  },
  "nbformat": 4,
